feat(ai): improve capability adding skills